# lab9

./: PROMPT_LOG.md  README.md
.github/workflows/: rust.yml
high3/: .gitignore  README.md  pyproject.toml  setup.py
high3/.github/workflows/: ci.yml
high3/python/: sieve.py
high3/rust/: Cargo.toml  build.rs
high3/rust/src/: lib.rs
high3/tests/: test_sieve.py
high5/: .gitignore  benchmark.py
high5/go/: go.mod  main.go
high5/python/: sieve.py
high5/rust/: Cargo.toml  ctypes_wrapper.py
high5/rust/src/: lib.rs
high5/tests/: test_sieve.py
mid2/: .gitignore
mid2/go/: go.mod  main.go
mid2/go/calc/: calc.go
mid2/python/: main.py
mid2/tests/python/: test_main.py
mid4/go/: go.mod  main.go
mid4/python/: main.py
mid4/tests/python/: test_main.py
mid9/: .gitignore  benchmark.py
mid9/python/: sieve.py
mid9/rust/: Cargo.toml
mid9/rust/src/: lib.rs  main.rs
mid9/tests/: test_sieve.py
