[package]
name = "sieve_rust"
version = "0.1.0"
edition = "2021"
description = "Fast Sieve of Eratosthenes implementation in Rust"
license = "MIT"
repository = "https://github.com/example/sieve"
readme = "README.md"

[lib]
name = "sieve"
crate-type = ["cdylib", "staticlib"]

[dependencies]

[build-dependencies]

[profile.release]
lto = true
opt-level = 3